Archive2/f7/94db23dae347b0/output
main.cpp:2:12: error: 'a' was declared 'extern' and later 'static' [-fpermissive]
 static int a = 10;
            ^
main.cpp:1:12: error: previous declaration of 'a' [-fpermissive]
 extern int a;
            ^
