Archive2/f7/94db23dae347b0/main.cpp
extern int a;
static int a = 10;
